[package]
name = "toad_writer"
version = "0.1.0"
edition = "2021"
authors = ["Mohammed Rehaan"]
description = """A simple and ergonomic text editor that is designed to help story writers by \
managing complex lore with dates, locations and names."""
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/Feohr/toad_writer"
keywords = ["text editor", "type-setting", "gtk"]
publish = false
build = "build/build.rs"

[dependencies]
anyhow = "1.0.69"
env_logger = "0.10.0"
gtk = { version = "0.6.2", package = "gtk4", features = ["v4_8"] }
log = "0.4.17"
simplelog = "0.12.1"
thiserror = "1.0.39"
time = "0.3.20"
# local libraries
tree = { package = "toad_writer_tree", path = "crate/toad_writer_tree" }
format = { package = "toad_writer_format", path = "crate/toad_writer_format" }
once_cell = "1.17.1"

[dev-dependencies]
gtk = { version = "0.6.2", package = "gtk4", features = ["v4_8"] }
# local libraries
tree = { package = "toad_writer_tree", path = "crate/toad_writer_tree" }
format = { package = "toad_writer_format", path = "crate/toad_writer_format" }

[build-dependencies]
glib-build-tools = "0.17.0"
serde = { version = "1.0.155", features = ["derive"] }
thiserror = "1.0.39"
toml = "0.7.2"
xml = { version = "0.8.4", package = "xml-rs" }
