[package]
name = "toad_writer_syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.39"
anyhow = "1.0.69"
gtk = { version = "0.6.2", package = "gtk4", features = ["v4_8"] }
log = "0.4.17"
